Add some named anchors.

--- a/content/Sub-Projects/index.html
+++ b/content/Sub-Projects/index.html
@@ -88,7 +88,7 @@
 
 <p>The separation into Applications, Main Libraries and Basic/Helper Libraries is somewhat arbitrary, don&#39;t derive to much meaning from it.</p>
 
-<h3>Applications</h3>
+<h3><a name="applications">Applications</a></h3>
 
 <ul>
 <li><a href="https://github.com/metapolator/metapolator" target="_blank" title="on GitHub">Metapolator</a> Design fonts and font families faster; Metapolator is the origin of Atem.<a href="http://metapolator.com" target="_blank">(website)</a></li>
@@ -96,7 +96,7 @@
 <li><a href="https://github.com/graphicore/Bauhaus-Emblem-Font" target="_blank" title="on GitHub">Bauhaus-Emblem-Font</a> Technology demo, learning tool, next generation (type-)design Application, Inspiration.</li>
 </ul>
 
-<h3>Main Libraries</h3>
+<h3><a name="libraries">Main Libraries</a></h3>
 
 <p>The building blocks for Atem-Applications.</p>
 
@@ -113,7 +113,7 @@
 <li><a href="https://github.com/graphicore/Atem-MOM-Toolkit" target="_blank" title="on GitHub">Atem-MOM-Toolkit</a> Shared tools used to render the Metapolator Object Model in user interfaces.</li>
 </ul>
 
-<h3>Basic/Helper Libraries</h3>
+<h3><a name="helpers">Basic/Helper Libraries</a></h3>
 
 <p>These are libraries and tools that are used throughout many of the Atem projects more infrastructure than innovation.</p>
 
